nginx-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: node.harprit.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodeapp-deployment
                port:
                  number: 3000
